# hexconverter

./: .gitignore  Cargo.toml  README.md  tests.json
src/: digit.rs  lib.rs  main.rs  numero.rs
tests/: test_num_digit.rs
