[package]
name = "hexconverter"
version = "0.1.0"
edition = "2021"

[lib]
name = "hexconverter"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
# Para leer los test de integración en src\lib desde un fichero json
serde = "1.0"
serde_json = "1.0"

